--- a/deploy-django.yaml
+++ b/deploy-django.yaml
@@ -19,7 +19,7 @@ spec:
             - name: ALLOWED_HOSTS
               value: "35.237.23.79"
             - name: GOOGLE_APPLICATION_CREDENTIALS
-              value: cat /code/secret.json
+              value: /code/secret.json
           ports:
             - containerPort: 8000
 ---
